--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -1,18 +1,18 @@
-name: PNCH Build
+name: Pisstortion Build
 
 env:
-  LOWER: pnch
-  PLUG: PNCH
-  NOSPACE: PNCH
+  LOWER: pisstortion
+  PLUG: Pisstortion
+  NOSPACE: Pisstortion
 
 on:
   push:
     paths:
-      - '**PNCH**'
+      - '**pisstortion**'
       - 'rebuild_all.txt'
   pull_request:
     paths:
-      - '**PNCH**'
+      - '**pisstortion**'
       - 'rebuild_all.txt'
     branches:
       - master
@@ -155,7 +155,7 @@ jobs:
         sudo cp -R -f "setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
         killall -9 AudioComponentRegistrar
         auval -a
-        auval -strict -v aufx Pnch Ured
+        auval -strict -v aufx Piss Ured
 
     - name: (windows) configure free
       if: startsWith(matrix.os, 'windows')
@@ -235,7 +235,7 @@ jobs:
         sudo cp -R -f "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component" "/Library/Audio/Plug-Ins/Components/${{ env.PLUG }}.component"
         killall -9 AudioComponentRegistrar
         auval -a
-        auval -strict -v aufx Pnch Ured
+        auval -strict -v aufx Piss Ured
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
