--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,8 @@ if (BANNERTYPE GREATER 0)
 			set(outdir "../../../setup/build_linux/free")
 			set(freedir "../../../setup/build_linux/free")
 		else()
-			set(outdir "../../../setup/build_windows/free")
-			set(freedir "../../../setup/build_windows/free")
+			set(outdir "../../../setup/build_win/free")
+			set(freedir "../../../setup/build_win/free")
 		endif()
 	endif()
 else()
@@ -57,8 +57,8 @@ else()
 			set(outdir "../../../setup/build_linux/paid")
 			set(freedir "../../../setup/build_linux/free")
 		else()
-			set(outdir "../../../setup/build_windows/paid")
-			set(freedir "../../../setup/build_windows/free")
+			set(outdir "../../../setup/build_win/paid")
+			set(freedir "../../../setup/build_win/free")
 		endif()
 	endif()
 endif()
