--- a/.github/workflows/mpaint_build.yml
+++ b/.github/workflows/mpaint_build.yml
@@ -27,7 +27,7 @@ jobs:
             name: "Win64",
             os: windows-latest,
             compiler: "Visual Studio 17 2022",
-            folder: "build_windows"
+            folder: "build_win"
           }
         - {
             name: "Linux",
@@ -77,14 +77,14 @@ jobs:
         p12-file-base64: ${{ secrets.DEV_ID_APP_CERT }}
         p12-password: ${{ secrets.DEV_ID_APP_PASSWORD }}
 
-    - name: (windows) configure
-      if: startsWith(matrix.os, 'windows')
-      id: configure_windows
+    - name: (win) configure
+      if: startsWith(matrix.os, 'win')
+      id: configure_win
       run: |
         cmake -DBANNERTYPE=0 -B "${{ matrix.folder }}" -G "${{ matrix.compiler }}" -T host=x64 -A x64
 
     - name: (unix) configure
-      if: ${{ !startsWith(matrix.os, 'windows') }}
+      if: ${{ !startsWith(matrix.os, 'win') }}
       id: configure
       run: |
         cmake -DBANNERTYPE=0 -B "${{ matrix.folder }}" -G "${{ matrix.compiler }}"
@@ -102,9 +102,9 @@ jobs:
       run: |
         cmake --build "${{ matrix.folder }}" --config Release --target ${{ env.NOSPACE }}_AU
 
-    - name: (windows) package
-      if: startsWith(matrix.os, 'windows')
-      id: package_windows
+    - name: (win) package
+      if: startsWith(matrix.os, 'win')
+      id: package_win
       run: |
         mv "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3/Contents/x86_64-win/${{ env.PLUG }}.vst3" "setup/${{ env.PLUG }}.vst3"
         rm -r "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
@@ -113,7 +113,7 @@ jobs:
         mv "${{ matrix.folder }}/plugins/${{ env.LOWER }}/${{ env.NOSPACE }}_artefacts/Release/Standalone/${{ env.PLUG }}.exe" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.exe"
         cp -r "plugins/${{ env.LOWER }}/samples" "setup/${{ matrix.folder }}/other/${{ env.PLUG }}"
         cp -r "plugins/${{ env.LOWER }}/samples" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}"
-        cp "plugins/${{ env.LOWER }}/how to install ${{ env.PLUG }}.txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
+        cp "plugins/${{ env.LOWER }}/how_to_install_${{ env.NOSPACE }}.txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
 
     - name: (linux) package
       if: startsWith(matrix.os, 'ubuntu')
@@ -122,7 +122,7 @@ jobs:
         mv "${{ matrix.folder }}/plugins/${{ env.LOWER }}/${{ env.NOSPACE }}_artefacts/CLAP/${{ env.PLUG }}.clap" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         mv "${{ matrix.folder }}/plugins/${{ env.LOWER }}/${{ env.NOSPACE }}_artefacts/Standalone/${{ env.PLUG }}" "setup/${{ matrix.folder }}/free/${{ env.PLUG }} Standalone"
         cp -r "plugins/${{ env.LOWER }}/samples" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}"
-        cp "plugins/${{ env.LOWER }}/how to install ${{ env.PLUG }}.txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
+        cp "plugins/${{ env.LOWER }}/how_to_install_${{ env.NOSPACE }}.txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
 
     - name: (mac) package
       if: startsWith(matrix.os, 'macos')
@@ -131,7 +131,7 @@ jobs:
         mv "${{ matrix.folder }}/plugins/${{ env.LOWER }}/${{ env.NOSPACE }}_artefacts/Release/CLAP/${{ env.PLUG }}.clap" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         mv "${{ matrix.folder }}/plugins/${{ env.LOWER }}/${{ env.NOSPACE }}_artefacts/Release/Standalone/${{ env.PLUG }}.app" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}.app"
         cp -r "plugins/${{ env.LOWER }}/samples" "setup/${{ matrix.folder }}/free/${{ env.PLUG }}"
-        cp "plugins/${{ env.LOWER }}/how to install ${{ env.PLUG }} (mac).txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
+        cp "plugins/${{ env.LOWER }}/how_to_install_${{ env.NOSPACE }}_mac.txt" "setup/${{ matrix.folder }}/free/how to install ${{ env.PLUG }}.txt"
 
     - name: (mac) code signing
       if: startsWith(matrix.os, 'macos')
@@ -175,9 +175,9 @@ jobs:
         auval -a
         auval -strict -v aumu Mpnt Ured
 
-    - name: (windows) build installer
-      if: startsWith(matrix.os, 'windows')
-      id: installer_windows
+    - name: (win) build installer
+      if: startsWith(matrix.os, 'win')
+      id: installer_win
       run: |
         cd setup
         iscc "innosetup.iss" "/DPluginName=${{ env.PLUG }}" "/DVersion=free" "/DNoPaid" "/DStandalone" "/DOtherData"
@@ -216,7 +216,7 @@ jobs:
         mv "${{ matrix.folder }}/free/Manual install/${{ env.PLUG }}.clap" "${{ matrix.folder }}/free/"
         mv "${{ matrix.folder }}/free/${{ env.PLUG }}.app" "${{ matrix.folder }}/free/Manual install/"
         pkgbuild --install-location "/Applications" --identifier "com.unplugred.${{ env.NOSPACE }}-standalone.pkg" --version 1.1.1 --root "${{ matrix.folder }}/free/Manual install" "${{ env.NOSPACE }}-standalone.pkg"
-        python3 productbuild.py --pluginname "${{ env.PLUG }}" --version "free" --nopaid --standalone --otherdata
+        python3 productbuild.py --pluginname "${{ env.PLUG }}" --version "free" --nopaid --standalone
         productbuild --timestamp --sign "${{ secrets.DEVELOPER_ID_INSTALLER }}" --distribution "${{ env.PLUG }}.xml" --resources "./assets/" "${{ env.PLUG }} Installer.pkg"
         xcrun notarytool submit "${{ env.PLUG }} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun stapler staple "${{ env.PLUG }} Installer.pkg"
